# Universal_Portfolio_Shrinkage

./: .gitignore  LICENSE  README.md  bryan_monthly_vw_cap.p  example.py  pyproject.toml  upsa.py
.github/workflows/: publish.yml
src/upsa/: upsa.py
tests/: example.py  test_upsa.py
