[build-system]
requires =  ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

 [project]
name = "universal-upsa"
version = "0.1.0"
description = "Unbiased Portfolio Shrinkage Approach (UPSA) with LOO or k-fold CV"
readme = "README.md"
license = { text = "MIT" }
authors =  [
  { name = "Mo Pourmohammadi", email = "mo.pourmohammadi@yale.edu" }
]

dependencies =  [
"numpy>=1.20",
"scikit-learn>=1.0",
"cvxopt>=1.3"
]

 [tool.setuptools.packages.find]
where =  ["src"]
include =  ["upsa*"]
